# vnpt-track2

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  analyze_errors.py  config.example.yaml  config.vnpt.json  inference.sh  predict.py  pyproject.toml  requirements.txt
config/: vnpt.json  vnpt.json.example
context_for_ai/: codebase_review_2024_12_15.md  implementation_plan.md  llm_api_description.md  prd.md  progress.md
context_for_ai/tasks/: test_first_5_questions.md  vnpt_api_integration.md
data/: knowledge_base.json  val.json
data/embeddings/: safety_index.npy  safety_queries.json
docs/: CRAWL_AND_INDEX_GUIDE.md  QUICK_START_CRAWL.md
examples/: simple_inference.py
notebooks/: 01-mlflow-evaluation.ipynb  01-test-api-vnpt.ipynb  02-basic-workflow.ipynb  val_2.json
notebooks/.ipynb_checkpoints/: 01-test-api-vnpt-checkpoint.ipynb  02-basic-workflow-checkpoint.ipynb
scripts/: generate_sample_artifacts.py
src/: submission_manager.py
src/artifacts/: bm25.pkl  faiss.index
src/brain/: config.py
src/core/: __init__.py  config.py  constants.py  models.py
src/models/: agent.py
src/offline/: __init__.py  pipeline.py
src/runtime/: __init__.py  pipeline.py
src/utils/: build_knowledge_index.py  build_safety.py  crawl_cli.py  (+2 more)
tests/: test_accuracy_calculation.py  test_agent_tasks.py  test_config_loading.py  test_crawler.py  test_csv_export.py  test_domain_aware_rag.py  test_first_5_questions.py  test_integration.py  test_lancedb.py  test_lancedb_integration.py  test_pipeline.py  test_pipeline_csv_export.py  test_rag_indexing.py  test_submission_manager.py  test_val_accuracy_demo.py
(+75 files in other folders)
